{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerTouch",
            "id": "7b6b77a5-c0db-4c49-a1fa-9a4ed33df3c9",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "dfab8f2c-b46f-41b6-86c4-7a5a20fdf2c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "22370753-414e-474f-b779-94689701ba5c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "594880bd-e215-4f14-a80e-1997e4506556",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bb0f64d-02c3-4bc7-9e71-56b724a64c4d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}